2008-07-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* rfc2104.el (rfc2104-zero): Delete defconst.
	(rfc2104-hex-alist): Likewise.
	(rfc2104-hex-to-int): Delete func.
	(rfc2104-hexstring-to-bitstring): Likewise.
	(rfc2104-nybbles): New defconst.
	(rfc2104-hash): Rewrite for speed.

2008-07-16  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (ns-focus-frame): Declare for compiler.

2008-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-save): Ignore gnus-visible-headers that is
	set as a group parameter.
	(gnus-summary-save-in-pipe): Work when it is called independently.
	(gnus-summary-pipe-to-muttprint): Don't modify
	gnus-summary-pipe-output-default-command.

2008-07-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-send-mail-with-sendmail):
	Display the error message.

2008-07-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-default-article-saver):
	Add gnus-summary-save-in-pipe to choices.
	(gnus-summary-save-in-pipe): Add :decode and :headers properties; use
	gnus-summary-pipe-output-default-command as the default command.
	(gnus-summary-pipe-to-muttprint): Update gnus-summary-muttprint-program
	instead of gnus-last-shell-command.

	* gnus-sum.el (gnus-summary-pipe-output-default-command):
	New user option.
	(gnus-summary-muttprint-program): Mention the value will be changed.
	(gnus-summary-save-article): Force showing of all headers.
	(gnus-summary-pipe-output): Work with the 2nd argument HEADERS.

2008-07-01  Rupert Swarbrick  <rswarbrick@googlemail.com>  (tiny change)

	* gnus-score.el (gnus-score-find-trace): Add "Total score" line.

2008-07-02  Juanma Barranquero  <lekktu@gmail.com>

	* nnimap.el (nnimap-id):
	* sieve-manage.el (sieve-manage-open): Doc fixes.

2008-07-02  Francesc Rocher  <rocher@member.fsf.org>

	* gnus.el (gnus-group-startup-message): Prefer SVG or PNG image,
	if available.

2008-06-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* mm-util.el (mm-with-multibyte, mm-with-unibyte): Remove.
