@@ -1593,7 +1593,6 @@ CHOICE is a list of the choice char and help message at IDX."
 
 (declare-function x-focus-frame "xfns.c" (frame))
 (declare-function w32-focus-frame "../term/w32-win" (frame))
-(declare-function ns-focus-frame "nsfns.m" (frame))
 
 (defun gnus-select-frame-set-input-focus (frame)
   "Select FRAME, raise it, and set input focus, if possible."
@@ -1610,12 +1609,10 @@ CHOICE is a list of the choice char and help message at IDX."
 	(t
 	 (raise-frame frame)
 	 (select-frame frame)
-	 (cond ((memq window-system '(x mac))
+	 (cond ((memq window-system '(x ns mac))
 		(x-focus-frame frame))
 	       ((eq window-system 'w32)
-		(w32-focus-frame frame))
-	       ((eq window-system 'ns)
-		(ns-focus-frame frame)))
+		(w32-focus-frame frame)))
 	 (when focus-follows-mouse
 	   (set-mouse-position frame (1- (frame-width frame)) 0)))))
 
