@@ -1,3 +1,9 @@
+2008-07-21  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* gnus-util.el (ns-focus-frame): Remove declaration.
+	(gnus-select-frame-set-input-focus): Undo previous change.  Treat ns
+	like x.
+
 2008-07-21  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	* rfc2104.el (rfc2104-zero): Delete defconst.
